--- a/registro.html
+++ b/registro.html
@@ -29,7 +29,7 @@
                 <h3>Acepto términos y condiciones</h3>
               </div>
               <div class="input-box button">
-                <input type="Submit" value="Register Now">
+                <input type="Submit" value="Registrarse">
               </div>
               <div class="text">
                 <h3>ya tienes una cuenta? <a href="#">Ingresar</a></h3>
